--- a/BlogWebsite/appsettings.json
+++ b/BlogWebsite/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "con": "Server=DESKTOP-NVI25PQ;Database=YTDb;Trusted_Connection=True;Encrypt=false;"
+  }
 }
